--- a/composer.json
+++ b/composer.json
@@ -7,5 +7,8 @@
     }
   },
   "license": "MIT",
-  "type": "prestashop-module"
+  "type": "prestashop-module",
+  "require": {
+    "symfony/http-client": "^5.0"
+  }
 }
