--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "harelsystems/helloharel",
-  "description": "Help developers to understand how to create module using new hooks and apply best practices when using CQRS",
+  "description": "Hello Harel integration",
   "autoload": {
     "psr-4": {
       "HelloHarel\\": "src/"
