--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
       "HelloHarel\\": "src/"
     }
   },
-  "license": "MIT",
+  "license": "AGPL-3.0-or-later",
   "type": "prestashop-module",
   "require": {
     "symfony/http-client": "^5.0"
